# Zophar

./: CMakeLists.txt  README.md  testEngine.cpp
OpenGLWrapper/: Shader.cpp  Shader.h  Shader.hpp  Texture.cpp  Texture.hpp
RenderEngine/: EngineConfig.hpp  RenderEngine.cpp  RenderEngine.h  RenderEngine.hpp  Renderable.h
RenderEngine/Box/: Box.cpp  Box.hpp
RenderEngine/Camera/: AbstractCamera.hpp  EularCamera.cpp  EularCamera.h  EularCamera.hpp
RenderEngine/Context/: Context.cpp  Context.h  Context.hpp
RenderEngine/InputManager/: InputManager.cpp  InputManager.hpp
RenderEngine/ObjectModel/: Mesh.hpp  Model.cpp  Model.hpp
RenderEngine/SkyBox/: SkyBox.cpp  SkyBox.h
RenderEngine/SolarSystem/: CelestialBody.cpp  CelestialBody.h  CelestialBody.hpp
RenderEngine/SolarSystem/Orbit/: Orbit.hpp
RenderEngine/Terrain/: PerlinNoise.cpp  PerlinNoise.hpp  Square.cpp  Square.hpp  TerrainGenerator.cpp  TerrainGenerator.hpp
RenderEngine/Utils/: ByteBuffer.cpp  ByteBuffer.hpp
RenderEngine/WindowManager/: WindowManager.cpp  WindowManager.h  WindowManager.hpp
include/glad/: glad.h
include/glm/: CMakeLists.txt  common.hpp
include/glm/detail/: func_common.inl  setup.hpp  type_quat.hpp  type_quat.inl
include/glm/ext/: scalar_constants.hpp  scalar_relational.inl  scalar_ulp.hpp  scalar_ulp.inl  vector_double1.hpp  vector_relational.hpp
include/glm/gtc/: integer.hpp  random.inl  round.hpp  round.inl  ulp.hpp
include/glm/gtx/: hash.hpp  norm.hpp  norm.inl  quaternion.hpp  quaternion.inl  scalar_multiplication.hpp
lib/: glad.c
res/earth/: earth.mtl
res/jupiter/: jupiter.mtl
res/mars/: mars.mtl
res/mercury/: mercury.mtl
res/moon/: moon.mtl
res/neptune/: neptune.mtl
res/saturn/: saturn.mtl
res/sun/: sun.mtl
res/uranus/: uranus.mtl
res/venus/: venus.mtl
shaders/: cookTorrance.f.glsl  cookTorrance.v.glsl  cookTorranceNoOp.f.glsl  cookTorranceNoOp.v.glsl  fShader.glsl  nanoFS.glsl  nanoVS.glsl  phong.f.glsl  phong.v.glsl  vShader.glsl
shaders/skybox/: skybox.f.glsl  skybox.v.glsl
